# CXXBestPractice

./: .gitignore  CMakeLists.txt
3rdpart/easy_log/: README.md  easylogging++.cpp  easylogging++.h
chapter_1/: Data_.cpp  Ta.cpp  知识点1.md
chapter_2/: 2_10.cpp  2_11.cpp  2_5.cpp  2_6.cpp  2_7.cpp  2_8.cpp  2_9.cpp  main.cpp  知识点.md
config/: log.conf
cxx_base/: SmartPointer.md  char.cpp  exception.cpp  inherit.cpp  move.cpp  perfect_forward.cpp  smart_point.cpp
cxx_best_practice/: c++最佳实践笔记.md
design_patterns/factory/: easy_factory.cpp  easy_factory.h  factory.cpp  factory.h  main.cpp  note.md
design_patterns/singleton/: hunger.h  main.cpp  notes.md
design_patterns/singleton_pattern/: hunger.h  lazy.h  main.cpp
design_philosophy/: 设计原则.md
src/: A.cpp  A.h  Data_.h  Ta.h  main.cpp
